# RCALibrary

./: .env.example  .gitignore  AGENTS.md  CODEOWNERS  README.md  pyproject.toml  requirements.txt  run.sh
backend/rcalibrary/: __init__.py  config.py  deps.py  errors.py  extensions.py  main.py
backend/rcalibrary/ai/: __init__.py  engine.py  llm.py  mcp_server.py  tools.py
backend/rcalibrary/analyzers/: __init__.py  builtins.py  context.py  registry.py
backend/rcalibrary/api/: routes_l2.py  routes_l3.py  routes_meta.py  schemas.py  (+1 more)
docs/: 01-overview.md  02-decision-framework.md  03-architecture.md  04-authoring-templates.md  05-data-sources.md  06-testing.md  07-building-use-cases.md  08-collaboration-and-branching.md  09-usecase-handoff.md  10-panel-customization.md  11-ai-panel-builder.md
examples/usecase-starter/: .env.example  README.md  requirements.txt  run.sh
frontend/: index.html
frontend/css/: base.css  components.css  layout.css  panels.css  tokens.css
frontend/js/: app.js  config.js
templates/ana.rca.generic-demo/: README.md  template.yaml
templates/ana.rca.generic-demo-agentic/: template.yaml
templates/ana.rca.generic-demo-cli/: template.yaml
templates/ana.rca.netcare-voc-trend/: IMPLEMENTATION.md  README.md  template.yaml
tests/: conftest.py
tests/api/: test_ai_panel.py  test_panel_customize.py  test_problems_endpoint.py  test_run_endpoint.py  test_solutions_endpoint.py  test_templates_endpoint.py
tests/e2e/: test_end_to_end.py
tests/fixtures/: sample_plugin.py
tests/unit/: test_ai_llm_engine.py  test_ai_panel.py  test_analyzers.py  test_extensions.py  test_input_groups.py  test_panel_library.py  test_report_assembly.py  test_sample_datasource.py  test_solution_registry.py  test_template_discovery.py  test_template_loader.py  test_template_validation.py  test_voc_collect_trend.py  test_voc_map_build.py  test_voc_neighbor_correlation.py  test_voc_ticket_search.py
usecases/: __init__.py  netcare_voc.py
(+92 files in other folders)
