[project]
name = "rcalibrary"
version = "0.1.0"
description = "Automated network-issue Root Cause Analysis — Level-1 fixed-workflow engine + UI"
requires-python = ">=3.10"

[tool.pytest.ini_options]
# `backend` -> the rcalibrary package; "." -> repo root for the `usecases` plugins.
pythonpath = ["backend", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
